# PBX

./: .bandit  .dockerignore  .editorconfig  .env.example  .flake8  .gitattributes  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .pylintrc  000BEA85ED68.log.0  000BEA85ED68.log.1  000bea85f554-all.cfg  33g1syslog.tar  33g2syslog.tar  37gsyslog.tar  47.80.132.4_16_16_18.pcap  47.80.132.4_17_22_7.pcap  47.80.132.4_17_8_31.pcap  47.80.132.4_17_8_42.pcap  =1.1.0  ABPS_IMPLEMENTATION_GUIDE.md  ADMIN_ACCESS_IMPLEMENTATION_STATUS.md  ADMIN_EXTENSION_ACCESS_CONTROL.md  ADMIN_PANEL_AUTO_ATTENDANT.md  ADMIN_PANEL_FEATURES_SUMMARY.md  ADMIN_PANEL_FIX_SUMMARY.md  ADMIN_PANEL_GUIDE.md  ADMIN_PANEL_VOICEMAIL_MANAGEMENT.md  ADMIN_PORTAL_FIX_SUMMARY.md  ADMIN_UI_AUTO_REFRESH_FIX.md  ADMIN_UI_AUTO_REFRESH_TESTING.md  ADMIN_UI_FIX_GUIDE.md  ADMIN_VS_USER_SCREEN_GUIDE.md  ADVANCED_VOIP_FEATURES_ANALYSIS.md  AD_SEARCH_API_GUIDE.md  AD_USER_SYNC_GUIDE.md  AGENTS.md  API_CONNECTION_FIX_SUMMARY.md  API_DOCUMENTATION.md  (+331 more)
.devcontainer/: devcontainer.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: code-quality.yml  dependency-updates.yml  production-deployment.yml  security-scanning.yml  syntax-check.yml  tests.yml
admin/: 404.html  dtmf_demo.html  header-demo.html  index.html  index.html.fixed  login.html  premium.html  status-check.html  test.html  tsconfig.json  verification.html  vite.config.js
admin/css/: 404.css  admin.css  base.css  components.css  layout.css  login.css  main.css  status-check.css  variables.css
admin/js/: admin.js  api-config.js  auto_attendant.js  debug-logger.js  framework_features.js  framework_features.js.bak  login.js  main.js  opensource_integrations.js  page-verify.js  sidebar-toggle.js  voicemail_enhanced.js  webrtc_phone.js
admin/tests/: README.md  refresh-all.test.js  sbc-management.test.js  voicemail.test.js
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_sip_password_field.py
auto_attendant/: README.md
docs/: APACHE_404_FIX.md  APACHE_REVERSE_PROXY_SETUP.md  ARCHITECTURE_DIAGRAMS.html  ARCHITECTURE_DIAGRAMS.md  ARCHITECTURE_DIAGRAMS_GENERATION_GUIDE.md  ATA_QUICK_REFERENCE.md  ATA_SUPPORT.md  ATA_SUPPORT_GUIDE.md  AUTO_ATTENDANT_SUBMENU_FEATURE.md  CAPACITY_PLANNING.md  DETAILED_COMPONENT_DIAGRAMS.md  DOCUMENTATION_INDEX.md  EXECUTIVE_SUMMARY.md  HA_DEPLOYMENT_GUIDE.md  IMPLEMENTATION_STATUS.md  INCIDENT_RESPONSE_PLAYBOOK.md  LICENSE_ADMIN_INTERFACE.md  OPERATIONS_RUNBOOK.md  PRODUCTION_READINESS_CHECKLIST.md  PRODUCT_IMPROVEMENT_RECOMMENDATIONS.md  REVERSE_PROXY_ARCHITECTURE.md  STRATEGIC_ROADMAP.md  SYSTEM_ARCHITECTURE.md  TLS_1.3_SUPPORT.md  TODO.md
docs/reference/: CALL_TAGGING_GUIDE.md  DROPDOWN_DATABASE_INTEGRATION.md  FRAMEWORK_FEATURES_COMPLETE_GUIDE.md  GEOGRAPHIC_REDUNDANCY_GUIDE.md  MAC_TO_IP_CORRELATION.md  MOBILE_APPS_GUIDE.md  OPEN_SOURCE_AI_INTEGRATION_COMPLETE.md  PHONE_BOOK_PAGING_API.md  README.md  SIP_SEND_LINE_MAC_GUIDE.md  (+1 more)
examples/: batch_licenses.json  batch_licenses.yml  phone_lookup_example.py  provisioning_example.py  simple_client.py  test_ad_group_permissions.py
kubernetes/: README.md  deployment.yaml  namespace.yaml  pvc.yaml  service.yaml  servicemonitor.yaml
moh/: README.md
pbx/: __init__.py  __version__.py  main.py
pbx/api/: app.py  (+8 more)
provisioning_templates/: PCAP Zultys ZIP33G.pcap  README.md  cisco_ata191.template  cisco_ata192.template  cisco_spa112.template  cisco_spa122.template  cisco_spa504g.template  grandstream_gxp2170.template  grandstream_ht801.template  grandstream_ht802.template  polycom_vvx450.template  yealink_t23g.template  yealink_t28g.template  yealink_t33g.template  yealink_t46s.template  zultys_zip33g.template  zultys_zip37g.template
scripts/: README.md  README_CRITICAL_BLOCKERS.md  README_PDF_GENERATION.md  README_SECURITY_COMPLIANCE.md  README_VOICE_GENERATION.md  backup.sh  benchmark_performance.py  capacity_calculator.py  check_fips_health.py  check_voicemail_storage.py  cleanup_config_extensions.py  compliance_report.py  convert_troubleshooting_to_html.py  demo_database_voicemail.py  deploy_production_pilot.sh  diagnose_qos.py  diagnose_server.sh  dtmf_payload_selector.py  emergency_recovery.sh  enable_fips_ubuntu.sh  export_all_templates.py  force_update_server.sh  generate_aa_prompts.py  generate_espeak_voices.py  generate_executive_summary_pdf.py  generate_moh_music.py  generate_natural_voices.py  generate_offline_tts.py  generate_service.py  generate_ssl_cert.py  generate_tts_prompts.py  generate_voice_prompts.py  health_monitor.py  import_merlin_voicemail.py  init_database.py  install_integrations.py  install_production.py  letsencrypt_manager.py  license_manager.py  list_extensions_from_db.py  (+39 more)
tests/: conftest.py  smoke_tests.py  test_active_directory_coverage.py  test_ad_extension_reload.py  test_ad_search_api.py  test_admin_static_files.py  test_advanced_call_features_coverage.py  test_ai_call_routing_coverage.py  test_api_app_coverage.py  test_api_communications_routes_coverage.py  test_api_endpoint_urls.py  test_api_extensions_routes_coverage.py  test_api_features_routes_coverage.py  test_api_framework_routes.py  test_api_graceful_degradation.py  test_api_metrics_middleware.py  test_api_monitoring_routes_coverage.py  test_api_provisioning_routes_coverage.py  test_api_routes.py  test_api_schemas_coverage.py  test_api_security_module_routes_coverage.py  test_api_security_routes_coverage.py  test_api_server_coverage.py  test_api_server_restart.py  test_api_server_retry.py  test_ata_support.py  test_audio_processing_coverage.py  test_audio_utils_coverage.py  test_audit_logger_coverage.py  test_authentication.py  test_auto_attendant.py  test_auto_attendant_feature_coverage.py  test_auto_attendant_handler_coverage.py  test_auto_attendant_persistence.py  test_auto_attendant_submenu.py  test_basic.py  test_beep_audio_fix.py  test_bi_integration_coverage.py  test_call_blending_coverage.py  test_call_quality_prediction_db_coverage.py  (+210 more)
voicemail_prompts/: README.md
(+235 files in other folders)
