[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "warden-voip"
version = "1.0.0"
description = "Warden Voip - A comprehensive, feature-rich Private Branch Exchange (PBX) and VOIP system built in Python"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Warden Voip Contributors"}
]
keywords = ["pbx", "voip", "sip", "telephony", "communication"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Telecommunications Industry",
    "Topic :: Communications :: Telephony",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
]

dependencies = [
    "PyYAML>=6.0.3",
    "cryptography>=46.0.5",
    "aiortc>=1.14.0",
    "twisted>=25.5.0",
    "pydub>=0.25.1",
    "sounddevice>=0.5.5",
    "gTTS>=2.5.4",
    "pyttsx3>=2.99",
    "sqlalchemy>=2.0.46",
    "psycopg2-binary>=2.9.11",
    # Note: requests version compatible with current docker-compose
    # See: https://github.com/docker/docker-py/issues/3256
    "requests>=2.32.5",
    "msal>=1.34.0",
    "fido2>=2.1.1",
    "opuslib>=3.0.1",
    "vosk>=0.3.45",
    "spacy>=3.8.11",
    "nltk>=3.9.2",
    "numpy>=2.4.2,<2.5",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "pyAudioAnalysis>=0.3.14",
    "librosa>=0.11.0",
    "soundfile>=0.13.1",
    "imageio-ffmpeg>=0.6.0",
    "av>=16.1.0",
    "pydantic>=2.0",
    "flask>=3.1.2",
    "werkzeug>=3.1.5",
    "jinja2>=3.1.6",
    "websockets>=16.0",
    "prometheus-client>=0.24.1",
    "redis>=7.1.1",
    "psutil>=7.2.2",
    "alembic>=1.15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-timeout>=2.4.0",
    "pytest-mock>=3.15.1",
    "pylint>=4.0.4",
    "flake8>=7.3.0",
    "black>=26.1.0",
    "mypy>=1.19.1",
    "isort>=7.0.0",
    "pre-commit>=4.5.1",
    "sphinx>=9.0.4",
    "sphinx-rtd-theme>=3.1.0",
    "ipython>=9.10.0",
    "ipdb>=0.13.13",
]
test = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-timeout>=2.4.0",
    "pytest-mock>=3.15.1",
]

[project.scripts]
pbx-server = "pbx.main:main"

[project.urls]
Homepage = "https://github.com/mattiIce/PBX"
Documentation = "https://github.com/mattiIce/PBX/blob/main/README.md"
Repository = "https://github.com/mattiIce/PBX"
Issues = "https://github.com/mattiIce/PBX/issues"

[tool.setuptools]
packages = ["pbx", "pbx.api", "pbx.api.routes", "pbx.api.schemas", "pbx.core", "pbx.features", "pbx.integrations", "pbx.models", "pbx.rtp", "pbx.sip", "pbx.utils"]

[tool.setuptools.package-data]
pbx = ["py.typed"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["pbx"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
]
branch = true
parallel = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
