[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "warden-voip"
version = "1.0.0"
description = "Warden VoIP - A comprehensive, feature-rich Private Branch Exchange (PBX) and VoIP system built in Python"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "Warden VoIP Contributors"}
]
keywords = ["pbx", "voip", "sip", "telephony", "communication", "rtp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Telecommunications Industry",
    "Topic :: Communications :: Telephony",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: POSIX :: Linux",
    "Typing :: Typed",
    "Framework :: Flask",
]

dependencies = [
    "PyYAML>=6.0.3",
    "cryptography>=46.0.5",
    "aiortc>=1.14.0",
    "twisted>=25.5.0",
    "pydub>=0.25.1",
    "sounddevice>=0.5.5",
    "gTTS>=2.5.4",
    "pyttsx3>=2.99",
    "sqlalchemy>=2.0.46",
    "psycopg2-binary>=2.9.11",
    "requests>=2.32.5",
    "msal>=1.34.0",
    "fido2>=2.1.1",
    "opuslib>=3.0.1",
    "vosk>=0.3.45",
    "spacy>=3.8.11",
    "nltk>=3.9.2",
    "numpy>=2.4.2,<2.5",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "pyAudioAnalysis>=0.3.14",
    "librosa>=0.11.0",
    "soundfile>=0.13.1",
    "imageio-ffmpeg>=0.6.0",
    "av>=16.1.0",
    "pydantic>=2.0",
    "flask>=3.1.2",
    "werkzeug>=3.1.5",
    "jinja2>=3.1.6",
    "websockets>=16.0",
    "prometheus-client>=0.24.1",
    "redis>=7.1.1",
    "psutil>=7.2.2",
    "alembic>=1.15.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "pytest-asyncio>=1.3.0",
    "pytest-timeout>=2.4.0",
    "pytest-mock>=3.15.1",
    "pytest-xdist>=3.5",
]
dev = [
    "warden-voip[test]",
    "ruff>=0.9",
    "mypy>=1.15",
    "pre-commit>=4.1",
    "sphinx>=8.0",
    "sphinx-rtd-theme>=3.0",
    "ipython>=8.30",
    "ipdb>=0.13.13",
    "pip-audit>=2.7",
]

[project.scripts]
pbx-server = "pbx.main:main"

[project.urls]
Homepage = "https://github.com/mattiIce/PBX"
Documentation = "https://github.com/mattiIce/PBX/blob/main/README.md"
Repository = "https://github.com/mattiIce/PBX"
Issues = "https://github.com/mattiIce/PBX/issues"
Changelog = "https://github.com/mattiIce/PBX/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["pbx"]

# =============================================================================
# Ruff - replaces Black, isort, flake8, pylint, and pycodestyle
# =============================================================================
[tool.ruff]
target-version = "py313"
line-length = 100
extend-exclude = [
    ".eggs",
    ".git",
    ".mypy_cache",
    ".tox",
    ".venv",
    "build",
    "dist",
    "venv",
    "logs",
    "recordings",
    "voicemail",
    "cdr",
    "node_modules",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade - enforces modern Python syntax
    "B",      # flake8-bugbear
    "A",      # flake8-builtins
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez
    "T10",    # flake8-debugger
    "ISC",    # flake8-implicit-str-concat
    "PIE",    # flake8-pie
    "PT",     # flake8-pytest-style
    "RSE",    # flake8-raise
    "RET",    # flake8-return
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented-out code)
    "PL",     # pylint rules
    "PERF",   # perflint
    "FURB",   # refurb - modernization suggestions
    "LOG",    # flake8-logging
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",    # line too long (formatter handles this)
    "E402",    # module level import not at top (needed for env loading)
    "PLR0913", # too many arguments
    "PLR0912", # too many branches
    "PLR0915", # too many statements
    "PLR2004", # magic value in comparison
    "PLR0911", # too many return statements
    "PLW0603", # global statement (existing pattern, tracked for future refactor)
    "ARG001",  # unused function argument (common in callbacks/handlers)
    "ARG002",  # unused method argument (common in overrides)
    "B008",    # function call in default argument (Flask patterns)
    "RET504",  # unnecessary assignment before return
    "SIM108",  # ternary operator (readability preference)
    "PTH123",  # open() vs Path.open() (acceptable pattern)
    "ISC001",  # single-line implicit string concat (conflicts with formatter)
    "ERA001",  # commented-out code (documentation/examples that should stay)
    "RUF001",  # ambiguous Unicode characters (intentional: checkmarks, arrows in logs)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["F401", "F811", "ARG", "PLR", "PT", "B011", "PLC0415"]
"pbx/api/rest_api.py" = ["ALL"]  # deprecated file
"pbx/features/*" = ["PLC0415"]  # lazy imports are intentional for dynamic feature loading
"pbx/core/*" = ["PLC0415"]  # lazy imports for circular import avoidance
"pbx/api/routes/*" = ["PLC0415"]  # lazy imports in route handlers
"pbx/api/app.py" = ["PLC0415"]  # lazy blueprint imports
"pbx/api/server.py" = ["PLC0415"]  # lazy imports
"pbx/api/utils.py" = ["PLC0415"]  # lazy imports
"pbx/api/license_api.py" = ["PLC0415"]  # lazy imports
"pbx/api/opensource_integration_api.py" = ["PLC0415"]  # lazy imports
"pbx/rtp/handler.py" = ["PLC0415"]  # lazy imports for optional codecs
"pbx/main.py" = ["PLC0415"]  # lazy imports for startup sequence
"pbx/utils/*" = ["PLC0415"]  # lazy imports for optional dependencies
"pbx/integrations/*" = ["PLC0415"]  # lazy imports for optional integrations
"scripts/*" = ["PLC0415", "PLW1510"]  # scripts use lazy imports and subprocess without check

[tool.ruff.lint.isort]
known-first-party = ["pbx"]
force-single-line = false
combine-as-imports = true

[tool.ruff.lint.pylint]
max-args = 10

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"
docstring-code-format = true
docstring-code-line-length = 80

# =============================================================================
# Mypy
# =============================================================================
[tool.mypy]
python_version = "3.13"
mypy_path = "."
namespace_packages = true
explicit_package_bases = true
enable_error_code = ["ignore-without-code", "redundant-cast", "truthy-bool"]

# Strict typing
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_optional = true
strict_equality = true

# Warnings
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = true
warn_unreachable = true

# Import handling
ignore_missing_imports = true

# Error display
show_error_context = true
show_column_numbers = true
show_error_codes = true
pretty = true
color_output = true
error_summary = true

[[tool.mypy.overrides]]
module = ["tests.*", "pbx.tests.*"]
ignore_errors = true

[[tool.mypy.overrides]]
module = ["pbx.api.rest_api", "pbx.api.license_api"]
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "pbx.api.app",
    "pbx.api.utils",
    "pbx.api.errors",
    "pbx.api.routes.*",
    "pbx.api.schemas.*",
    "pbx.core.*",
    "pbx.models.*",
]
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["pbx.features.*", "pbx.utils.*", "scripts.*"]
ignore_errors = true

# =============================================================================
# Pytest
# =============================================================================
[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:twisted.*",
    "ignore::DeprecationWarning:sqlalchemy.*",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
xfail_strict = true

# =============================================================================
# Coverage
# =============================================================================
[tool.coverage.run]
source = ["pbx"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/migrations/*",
]
branch = true
parallel = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
fail_under = 70
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "@overload",
    "\\.\\.\\.",
]
exclude_also = [
    "class .*\\bProtocol\\):",
    "if sys.version_info",
]

[tool.coverage.html]
directory = "htmlcov"

# =============================================================================
# Bandit (security scanning)
# =============================================================================
[tool.bandit]
exclude_dirs = ["tests"]
skips = [
    "B108",  # hardcoded_tmp_directory
    "B110",  # try_except_pass
    "B404",  # blacklist imports
    "B603",  # subprocess_without_shell_equals_true
    "B607",  # start_process_with_partial_path
    "B602",  # subprocess_popen_with_shell_equals_true
    "B605",  # start_process_with_a_shell
    "B105",  # hardcoded_password_string
    "B113",  # request_without_timeout
    "B104",  # hardcoded_bind_all_interfaces
    "B310",  # urllib_urlopen
    "B311",  # random (pseudo-random generators)
]
